# quiz-generator

./: .devcontainer.json  .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  configuration.yaml.example  docker-compose.dev.yaml  docker-compose.dev.yml
cmd/api/: Cargo.toml  Makefile  api.http
cmd/api/http/: api.http  evaluacion.http  examen2.http  postulante.http  respuesta.http
cmd/api/http/auth/: login.http
cmd/api/http/dev/: admin.http  evaluacion.http  examen1.http  examen2.http  examen3_entrevista.http  postulante.http  psicologo.http  respuesta.http
cmd/api/http/dev/auth/: login.http  login_admin.http  login_psicologo.http
cmd/api/http/dev/revision/: revisar-examen.http
cmd/api/http/presentacion/: evaluacion.http  examen2.http
cmd/api/http/revision/: revisar-examen.http
cmd/api/migrations/: 20250515041101_create_postulante_table.sql
cmd/api/src/: configuration.rs  cors.rs  lib.rs  main.rs  mongo.rs  redis.rs  startup.rs
cmd/api/src/controller/: hateoas.rs  mod.rs  mongo_repository.rs  revision.rs
cmd/api/src/controller/admin/: crypto.rs  dto.rs  mod.rs  registrar_admin.rs  route.rs
cmd/api/src/controller/admin/mongo/: constantes.rs  mod.rs  write.rs
cmd/api/src/controller/applicant/: applicant_put.rs  mod.rs
cmd/api/src/controller/auth/: admin_login.rs  casbin_enforcer.rs  crypto.rs  dto.rs  jwt.rs  logout.rs  middleware.rs  mod.rs  postulante_login.rs  psicologo_login.rs  redis.rs  route.rs  universal_login.rs
cmd/api/src/controller/auth/mongo/: admin_read.rs  constantes.rs  mod.rs  psicologo_read.rs  read.rs  universal_read.rs
cmd/api/src/controller/auth/redis/: admin_write.rs  psicologo_write.rs  universal_borrar.rs  universal_write.rs  write.rs
cmd/api/src/controller/evaluacion/: asociar_examen.rs  dto.rs  listar_evaluaciones.rs  mod.rs  publicar_evaluacion.rs  registrar_evaluacion.rs  route.rs
cmd/api/src/controller/evaluacion/mongo/: constantes.rs  read.rs  write.rs
cmd/api/src/controller/examen/: dto.rs  listar_examenes.rs  mod.rs  registrar_examen.rs  route.rs
cmd/api/src/controller/examen/mongo/: mod.rs  read.rs  write.rs
cmd/api/src/controller/healthcheck/: route.rs
cmd/api/src/controller/postulante/: buscar_postulante.rs  crypto.rs  database.rs  database_read.rs  database_write.rs  datasbase.rs  dto.rs  mod.rs  obtener_postulante.rs  registrar_postulante.rs  route.rs
cmd/api/src/controller/postulante/mongo/: constantes.rs  database_read.rs  database_write.rs  mod.rs  read.rs  write.rs
cmd/api/src/controller/pregunta/: agregar_pregunta.rs  dto.rs  mod.rs  route.rs
cmd/api/src/controller/pregunta/mongo/: constantes.rs  write.rs
cmd/api/src/controller/psicologo/: crypto.rs  dto.rs  listar_psicologos.rs  mod.rs  registrar_psicologo.rs  route.rs
cmd/api/src/controller/psicologo/mongo/: constantes.rs  read.rs  write.rs
cmd/api/src/controller/respuesta/: asignar_evaluacion_postulante.rs  contestar_pregunta.rs  dto.rs  empezar_examen.rs  lista_respuesta.rs  lista_respuesta_postulante.rs  listar_asignaciones.rs  listar_respuestas.rs  mod.rs  obtener_respuesta.rs  responder_evaluacion.rs  responder_questionario.rs  respuesta_evaluacion.rs  respuesta_por_postulante.rs  route.rs  transicion_estado.rs
cmd/api/src/controller/respuesta/mongo/: mod.rs  read.rs  respuesta_dto.rs  write.rs
cmd/api/src/controller/revision/: dto.rs  listar_postulante.rs  listar_revisiones.rs  obtener_revision.rs  revisar_evaluacion_postulante.rs  route.rs
cmd/api/src/controller/revision/mongo/: constantes.rs  read.rs  write.rs
cmd/api/src/controller/usuario/: crypto.rs  dto.rs  handler.rs  mod.rs  route.rs
cmd/api/src/controller/usuario/mongo/: constantes.rs  (+2 more)
main/api/: Cargo.toml
main/api/src/: lib.rs  main.rs  startup.rs
main/api/src/controller/: mod.rs
main/api/src/controller/applicant/: applicant_put.rs  applicant_put_controller.rs  mod.rs  route.rs
main/api/src/controller/healthcheck/: route.rs
(+427 files in other folders)
