[workspace]
resolver = "3"

members = [
    # Subdominio basico
    "bctx/core",

    # Subdominios de soporte
    "bctx/usermgm",
    "bctx/auth",
    "bctx/common",

    # ---
    # New Implementation
    # Subdominio principal (Core)
    "bounded-contexts/evaluacion/core",

    # Subdominios de soporte
    "bounded-contexts/evaluacion/aplicacion-evaluaciones",
    "bounded-contexts/evaluacion/common",

    # API
    "cmd/api",
]
