[package]
name = "quizz-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "quizz"

[dependencies]
quizz-core = { path = "../../bctx/core" }
quizz-common = { path = "../../bctx/common" }

actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.218", features = ["derive"] }
config = "0.14.0"
bcrypt = "0.14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.88"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
