[package]
name = "quizz-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "quizz"

[dependencies]
quizz-core = { path = "../../bctx/core" }
quizz-common = { path = "../../bctx/common" }

actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.218", features = ["derive"] }
config = "0.14.0"
bcrypt = "0.14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.88"
uuid = { version = "1.15.1", features = ["v4"] }
serde_json = "1.0.140"
actix-cors = "0.6.4"
http = "0.2.12"
futures = "0.3"

[dependencies.mongodb]
version = "2.6.0"
default-features = false
features = ["async-std-runtime"]
