[package]
name = "quizz-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "quizz"

[dependencies]
quizz-core = { path = "../../bctx/core" }
quizz-common = { path = "../../bctx/common" }
quizz-auth = { path = "../../bctx/auth" }

actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.218", features = ["derive"] }
config = "0.15.19"
bcrypt = "0.17.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.88"
serde_json = "1.0.140"
actix-cors = "0.7.1"
futures = "0.3"
chrono = "0.4.41"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }

mongodb = "3.4.1"
