[package]
name = "quizz-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "quizz"

[dependencies]
quizz-core = { path = "../core" }
quizz-backoffice = { path = "../backoffice"}

actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.218", features = ["derive"] }
